file(GLOB_RECURSE HEADER_FILES *.h)
file(GLOB_RECURSE SOURCE_FILES *.cc)

source_group_by_dir(HEADER_FILES)
source_group_by_dir(SOURCE_FILES)

SET(CUR_TARGET DataStructure)
ADD_LIBRARY(${CUR_TARGET} STATIC ${HEADER_FILES} ${SOURCE_FILES})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

INSTALL(TARGETS ${CUR_TARGET} DESTINATION lib)
